--- a/dmu1/dmu1_ml_SGP/1.5_DES.ipynb
+++ b/dmu1/dmu1_ml_SGP/1.5_DES.ipynb
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
@@ -310,7 +310,7 @@
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
-    "                    gaia_coords.ra, gaia_coords.dec)"
+    "                    gaia_coords.ra, gaia_coords.dec, near_ra0=True)"
    ]
   },
   {
