Working on DECAM merge on HS82
Also bug fixes on DES across southern fields #15 #4 #6 #17 #11 #18 #20

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.9_DES.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.9_DES.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -34,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -104,6 +108,7 @@
     "        'WAVG_MAG_PSF_G': \"m_ap_decam_g\", \n",
     "        'WAVG_MAGERR_PSF_G': \"merr_ap_decam_g\",\n",
     "    \n",
+    "        'FLUX_AUTO_R': \"f_decam_r\", \n",
     "        'FLUXERR_AUTO_R': \"ferr_decam_r\", \n",
     "        'WAVG_FLUX_PSF_R': \"f_ap_decam_r\", \n",
     "        'WAVG_FLUXERR_PSF_R': \"ferr_ap_decam_r\",\n",
@@ -112,6 +117,7 @@
     "        'WAVG_MAG_PSF_R': \"m_ap_decam_r\", \n",
     "        'WAVG_MAGERR_PSF_R': \"merr_ap_decam_r\",\n",
     "    \n",
+    "        'FLUX_AUTO_I': \"f_decam_i\",\n",
     "        'FLUXERR_AUTO_I': \"ferr_decam_i\", \n",
     "        'WAVG_FLUX_PSF_I': \"f_ap_decam_i\", \n",
     "        'WAVG_FLUXERR_PSF_I': \"ferr_ap_decam_i\",\n",
@@ -120,6 +126,7 @@
     "        'WAVG_MAG_PSF_I': \"m_ap_decam_i\", \n",
     "        'WAVG_MAGERR_PSF_I': \"merr_ap_decam_i\",\n",
     "    \n",
+    "        'FLUX_AUTO_Z': \"f_decam_z\",\n",
     "        'FLUXERR_AUTO_Z': \"ferr_decam_z\", \n",
     "        'WAVG_FLUX_PSF_Z': \"f_ap_decam_z\", \n",
     "        'WAVG_FLUXERR_PSF_Z': \"ferr_ap_decam_z\",\n",
@@ -128,13 +135,14 @@
     "        'WAVG_MAG_PSF_Z': \"m_ap_decam_z\", \n",
     "        'WAVG_MAGERR_PSF_Z': \"merr_ap_decam_z\",\n",
     "    \n",
+    "        'FLUX_AUTO_Y': \"f_decam_y\",\n",
     "        'FLUXERR_AUTO_Y': \"ferr_decam_y\", \n",
     "        'WAVG_FLUX_PSF_Y': \"f_ap_decam_y\", \n",
     "        'WAVG_FLUXERR_PSF_Y': \"ferr_ap_decam_y\",\n",
     "        'MAG_AUTO_Y': \"m_decam_y\", \n",
     "        'MAGERR_AUTO_Y': \"merr_decam_y\", \n",
     "        'WAVG_MAG_PSF_Y': \"m_ap_decam_y\", \n",
-    "        'WAVG_MAGERR_PSF_Y': \"merr_ap_decam_y\",\n",
+    "        'WAVG_MAGERR_PSF_Y': \"merr_ap_decam_y\"\n",
     "\n",
     "    })\n",
     "\n",
@@ -191,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[:10].show_in_notebook()"
@@ -214,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "SORT_COLS = ['merr_ap_decam_g', 'merr_ap_decam_r','merr_ap_decam_i','merr_ap_decam_z','merr_ap_decam_y']\n",
@@ -255,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
@@ -265,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
@@ -292,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
@@ -322,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GAIA_FLAG_NAME = \"des_flag_gaia\"\n",
