Adding DES to HS82
I think DES aperture fluxes may be wrong - only weighted average psf fits available in main cat - may need to take flux cat and do aperture correction as for DEcaLS #15

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.1_IRAC_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.1_IRAC_merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -962,7 +964,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/IRAC.fits\".format(TMP_DIR, SUFFIX), overwrite=True)"
+    "master_catalogue[columns].write(\"{}/iraq_merged_catalogue_herschel-stripe-82.fits\".format(TMP_DIR), overwrite=True)"
    ]
   }
  ],
