Adding DES to merge on all southern fields
Still needs to be added to the checks. MAy have to rerun all DES stuff with new download as wavg fluxes may not be aperture fluxes. #15 #4 #17 #6 #11 #20 #18

--- a/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
@@ -94,7 +94,8 @@
     "vhs = Table.read(\"{}/VISTA-VHS.fits\".format(TMP_DIR))\n",
     "voice = Table.read(\"{}/ESIS-VOICE.fits\".format(TMP_DIR))\n",
     "servs = Table.read(\"{}/SERVS.fits\".format(TMP_DIR))\n",
-    "swire= Table.read(\"{}/SWIRE.fits\".format(TMP_DIR))"
+    "swire= Table.read(\"{}/SWIRE.fits\".format(TMP_DIR))\n",
+    "des = Table.read(\"{}/DES.fits\".format(TMP_DIR))"
    ]
   },
   {
@@ -302,6 +303,39 @@
    "source": [
     "# Given the graph above, we use 1 arc-second radius\n",
     "master_catalogue = merge_catalogues(master_catalogue, swire, \"swire_ra\", \"swire_dec\", radius=1.*u.arcsec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add DES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(des['des_ra'], des['des_dec'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Given the graph above, we use 0.8 arc-second radius\n",
+    "master_catalogue = merge_catalogues(master_catalogue, des, \"des_ra\", \"des\", radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -1242,7 +1276,8 @@
     "vhs_moc = MOC(filename=\"../../dmu0/dmu0_VISTA-VHS/data/VHS_ELAIS-S1_MOC.fits\")\n",
     "voice_moc = MOC(filename=\"../../dmu0/dmu0_ESIS-VOICE/data/esis_b2vr_cat_03_HELP-coverage_MOC.fits\")\n",
     "servs_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_ELAIS-S1_MOC.fits\")\n",
-    "swire_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SWIRE_ELAIS-S1_MOC.fits\")"
+    "swire_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SWIRE_ELAIS-S1_MOC.fits\")\n",
+    "des_moc = MOC(filename=\"../../dmu0/dmu0_DES/data/DES-DR1_ELAIS-S1_MOC.fits\")"
    ]
   },
   {
@@ -1255,7 +1290,7 @@
    "source": [
     "was_observed_optical = inMoc(\n",
     "    master_catalogue['ra'], master_catalogue['dec'],\n",
-    "    voice_moc) \n",
+    "    voice_moc + des_moc) \n",
     "\n",
     "was_observed_nir = inMoc(\n",
     "    master_catalogue['ra'], master_catalogue['dec'],\n",
@@ -1315,7 +1350,13 @@
     "# CFHT band.\n",
     "# Check to use catalogue flags from HSC and PanSTARRS.\n",
     "nb_optical_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_voice_r']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_voice_r']) +\n",
+    "    \n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_r']) +    \n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_y']) \n",
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
@@ -1373,14 +1414,16 @@
     "                 'vhs_id',\n",
     "                 'voice_id',\n",
     "                 'servs_intid', \n",
-    "                 'swire_intid'].write(\n",
+    "                 'swire_intid',\n",
+    "                 'des_id'].write(\n",
     "    \"{}/master_list_cross_ident_elais-s1{}.fits\".format(OUT_DIR, SUFFIX))\n",
     "master_catalogue.remove_columns([\n",
     "                 'video_id', \n",
     "                 'vhs_id',\n",
     "                 'voice_id',\n",
     "                 'servs_intid', \n",
-    "                 'swire_intid'])"
+    "                 'swire_intid',\n",
+    "                 'des_id'])"
    ]
   },
   {
@@ -1482,7 +1525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
