DECam adding to checks across southern fields
#17 #11, #18, #20'

--- a/dmu1/dmu1_ml_SSDF/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SSDF/2_Merging.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -123,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_merge_dist_plot(\n",
@@ -209,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue[:10].show_in_notebook()"
@@ -278,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stellarity_columns = [column for column in master_catalogue.colnames\n",
@@ -346,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check that the HELP Ids are unique\n",
@@ -389,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_merge_dist_plot(\n",
@@ -523,18 +535,16 @@
     "    1 * ~np.isnan(master_catalogue['f_decam_y']) \n",
     ")\n",
     "\n",
-    "# VISTA-VHS is a catalogue of sources detected in any of the J, H, and K band (**TODO**: to be confirmed by\n",
-    "# Manda). We then can't say in how many bands a source was detected. Sources detected in mIR are sources\n",
-    "# having an associated vhs_id.\n",
     "nb_nir_flux = (\n",
-    "    1 * (master_catalogue['vhs_id'] != -1)\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_h']) +    \n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
     ")\n",
     "\n",
-    "# For SSDF, we use the IRAC1 selected sources. For some sources, the catalogue does not contain IRAC1 flux (whereas the sources\n",
-    "# were detected there) but contains the error, which may indicate upper limits. To find the sources that were detected in\n",
-    "# IRAC we select the source which have an associated ssdf_id.\n",
+    "\n",
     "nb_mir_flux = (\n",
-    "    1 * (master_catalogue['ssdf_id'] != -1)\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i1']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i2'])  \n",
     ")"
    ]
   },
@@ -572,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "id_names = []\n",
@@ -654,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We check for columns in the master catalogue that we will not save to disk.\n",
