--- a/dmu1/dmu1_ml_SSDF/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SSDF/3_Checks_and_diagnostics.ipynb
@@ -140,13 +140,17 @@
     }
    ],
    "source": [
-    "venn2(\n",
+    "venn3(\n",
     "    [\n",
-    "        np.sum(flag_obs == 2),\n",
     "        np.sum(flag_obs == 4),\n",
-    "        np.sum(flag_obs == 6)\n",
+    "        np.sum(flag_obs == 2),\n",
+    "        np.sum(flag_obs == 6),\n",
+    "        np.sum(flag_obs == 1),\n",
+    "        np.sum(flag_obs == 5),\n",
+    "        np.sum(flag_obs == 3),\n",
+    "        np.sum(flag_obs == 7)\n",
     "    ],\n",
-    "    set_labels=('near-IR', 'mid-IR'),\n",
+    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/len(flag_obs)))\n",
     ")\n",
     "plt.title(\"Wavelength domain observations\");"
@@ -160,22 +164,23 @@
    },
    "outputs": [],
    "source": [
-    "# We have only one nIR and one mIR catalogue so the detection flag which uses a minimum of two detections\n",
-    "# will be 0 everywhere.\n",
-    "\n",
-    "#venn2(\n",
-    "#    [\n",
-    "#       np.sum(flag_det[flag_obs == 6] == 2),\n",
-    " #      np.sum(flag_det[flag_obs == 6] == 4),\n",
-    "#        np.sum(flag_det[flag_obs == 6] == 6)\n",
-    "#    ],\n",
-    "#    set_labels=('near-IR', 'mid-IR'),\n",
-    "#    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/np.sum(flag_det != 0)))\n",
-    "#)\n",
-    "#plt.title(\"Detection of the {} sources detected\\n in any wavelength domains \"\n",
-    "#          \"(among {} sources)\".format(\n",
-    "#              locale.format('%d', np.sum(flag_det != 0), grouping=True),\n",
-    "#             locale.format('%d', len(flag_det), grouping=True)));"
+    "venn3(\n",
+    "    [\n",
+    "        np.sum(flag_det[flag_obs == 7] == 4),\n",
+    "        np.sum(flag_det[flag_obs == 7] == 2),\n",
+    "        np.sum(flag_det[flag_obs == 7] == 6),\n",
+    "        np.sum(flag_det[flag_obs == 7] == 1),\n",
+    "        np.sum(flag_det[flag_obs == 7] == 5),\n",
+    "        np.sum(flag_det[flag_obs == 7] == 3),\n",
+    "        np.sum(flag_det[flag_obs == 7] == 7)\n",
+    "    ],\n",
+    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
+    "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/np.sum(flag_det != 0)))\n",
+    ")\n",
+    "plt.title(\"Detection of the {} sources detected\\n in any wavelength domains \"\n",
+    "          \"(among {} sources)\".format(\n",
+    "              locale.format('%d', np.sum(flag_det != 0), grouping=True),\n",
+    "              locale.format('%d', len(flag_det), grouping=True)));"
    ]
   },
   {
@@ -195,10 +200,15 @@
    },
    "outputs": [],
    "source": [
-    "j_bands = [ \"VISTA j\"]\n",
-    "h_bands = [ \"VISTA h\"]\n",
-    "k_bands = [ \"VISTA k\"]\n",
-    "irac_bands = [\"IRAC I1\", \"IRAC I2\"]"
+    "g_bands = [\"DECam g\"]\n",
+    "r_bands = [\"DECam r\"]\n",
+    "i_bands = [\"DECam i\"]\n",
+    "z_bands = [\"DECam z\"]\n",
+    "y_bands = [\"DECam y\"]\n",
+    "j_bands =           [ \"VISTA j\"]\n",
+    "h_bands =           [ \"VISTA h\"]\n",
+    "k_bands =           [ \"VISTA k\"]\n",
+    "irac_bands =                    [\"IRAC I1\", \"IRAC I2\"]"
    ]
   },
   {
@@ -239,7 +249,7 @@
     }
    ],
    "source": [
-    "for bands in [j_bands + h_bands + k_bands, irac_bands]:\n",
+    "for bands in [g_bands + r_bands + i_bands + z_bands + y_bands, j_bands + h_bands + k_bands, irac_bands]:\n",
     "    colnames = [\"m_{}\".format(band.replace(\" \", \"_\").lower()) for band in bands]\n",
     "    nb_histograms(master_catalogue, colnames, bands)"
    ]
